[package]
name = "shopify-install-app-in-rust"
version = "0.1.0"
authors = ["shinichi kogai <kogai0121@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
actix-session = "0.4.0"
serde = "1.0.123"
url = "2.2.0"
rand = "0.8.3"
hmac = "0.10.1"
sha2 = "0.9.2"
env_logger = "0.8"
hex = "0.4.2"
querystring = "1.1.0"
